@@ -1,3 +1,9 @@
+ags (2.1.16)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed reading AgsOscillator sync-point
+	* fixed division by zero in ags_synth_util.c
+
 ags (2.1.15)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
